--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -43,7 +43,7 @@ a { font-weight: bold; font-family: helvetica; }
   #Team2 { right: 0%; }
 
   /* Team Name sub-box */
-  div.Team>div.Name { text-align: center; top: 0%; width: 90%; height: 48%; }
+  div.Team>div.Name { top: 0%; width: 90%; height: 48%; }
   div.Team>div.Name.ShowLogo { height: 16%; }
   div.Team>div.Name>a { color: #ffffff; }
   #Team1>div.Name { left: 5%; }
@@ -64,7 +64,7 @@ a { font-weight: bold; font-family: helvetica; }
   #Team2>div.Score { right: 15%; }
 
   /* Team Jammer sub-box */
-  div.Team>div.Jammer { text-align: center; bottom: 0%; width: 90%; height: 18%; }
+  div.Team>div.Jammer { bottom: 0%; width: 90%; height: 18%; }
   #Team1>div.Jammer { right: 100%; }
   #Team2>div.Jammer { left: 100%; }
   #Team1>div.Jammer.ShowJammer.ShowJam { right: 5%; }
