increase metacontrol font size change minor details of how border-radius is set

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -26,11 +26,11 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.TabTable>tbody>tr:last-of-type>td { border-bottom: 0px; }
   #TeamTime table.TabTable>tbody>tr:first-of-type>td { border-radius: 12px 12px 0px 0px; }
   #TeamTime table.TabTable>tbody>tr:last-of-type>td { border-radius: 0px 0px 12px 12px; }
+  #TeamTime table.TabTable>tbody>tr:only-of-type>td { border-radius: 12px; }
 
   #TeamTime table.MetaControl>tbody>tr>td { width: 100%; }
-  #TeamTime table.MetaControl { font-size: 50%; }
+  #TeamTime table.MetaControl { font-size: 65%; }
   #TeamTime table.MetaControl>tbody>tr>td { background: #eee; text-align: center; }
-  #TeamTime table.MetaControl>tbody>tr:last-of-type>td { border-radius: 12px 12px 12px 12px; }
 
   #TeamTime table.JamControl>tbody>tr>td { width: 100%; }
   #TeamTime table.JamControl>tbody>tr:first-of-type>td { border-radius: 12px; }
