update SaveLoad section

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -90,11 +90,11 @@ table.RowTable { border-spacing: 0px; }
 /* End Teams Control */
 
 /* Save/Load Control */
-  #SaveLoad tr.Name>td { background: #ccc; border-radius: 12px 12px 0px 0px; text-align: center; }
-  #SaveLoad tr.Name>td.Hide { border-radius: 12px; }
-  #SaveLoad tr.Content>td { background: #eee; }
-  #SaveLoad tr.Content>td.Description { border-radius: 0px 0px 0px 12px; width: 60%; text-align: left; }
-  #SaveLoad tr.Content>td.Controls { border-radius: 0px 0px 12px 0px; width: 40%; text-align: center; }
+  #SaveLoad table { width: 100%; border-spacing: 1px 0px; }
+  #SaveLoad table tr>td { text-align: center; background: #eee; }
+  #SaveLoad table tr.Name>td { background: #ccc; border-radius: 12px 12px 0px 0px; }
+  #SaveLoad table tr.Content>td:first-of-type { border-radius: 0px 0px 0px 12px; }
+  #SaveLoad table tr.Content>td:last-of-type { border-radius: 0px 0px 12px 0px; }
 /* End Save/Load Control */
 
 
