add comment to indicate main setup function

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -33,6 +33,7 @@ var animateTime = {
 };
 
 
+// Main setup function
 $sb(function() {
   setupMainDiv($("#mainDiv")); // This needs to be part of scoreboard framework
   var view = $sbThisPage.$sb("CurrentView");
