--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -4,6 +4,8 @@
 <script type="text/javascript" src="/external/jquery/jquery.js" ></script>
 <script type="text/javascript" src="/javascript/scoreboard.js" ></script>
 
+<link rel="StyleSheet" href="scoreboard.css" type="text/css" ></link>
+
 <script type="text/javascript">
 
 // Set animation interval period (33 ~= 30fps)
@@ -336,10 +338,6 @@ function setupPulsate(pulseCondition, pulseTarget, pulsePeriod) {
 }
 
 </script>
-
-<style type="text/css" >
-@import url("scoreboard.css");
-</style>
 
 </head>
 
