create new whitebox.jpg to replace white-gradient.png use background-image instead of actual inner img element add box-shadow

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -73,8 +73,11 @@ function setupMainDiv(div) {
 }
 
 function setupBackgrounds() {
-  $("<img>").addClass("Background").attr("src", "/images/white-gradient.png")
-    .appendTo(".WhiteBox");
+  _crgUtils.bindAndRun($(window), "resize", function() {
+    $("div.WhiteBox").each(function() {
+      $(this).css("fontSize", $(this).height()+"px");
+    });
+  });
 }
 
 
