--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -8,12 +8,10 @@ div.full { height: 100%; width: 100%; border-radius: inherit; }
 div.Pulse { background: #ff0000; }
 
 /* background images */
-div.WhiteBox { font-size: 0px; }
-img.Background {
-  position: absolute;
-  left: 0%; top:0%; width: 100%; height: 100%;
-  border-radius: inherit;
-  z-index: -50;
+div.WhiteBox {
+  background: url('/images/whitebox.jpg');
+  background-size: 100% 100%; -moz-background-size: 100% 100%;
+  box-shadow: inset -0.03em -0.05em 0.15em rgba(0,0,0,0.5);
 }
 
 /* Fixed-size text containers/elements */
